# desk-changer

./: .gitignore  CMakeLists.txt
includes/: config.h.in  desk-changer.h.in
nbproject/: Package-Default.bash  configurations.xml  project.xml
src/: CMakeLists.txt
src/desk-changer/: CMakeLists.txt  desk-changer.c  desk-changer.h
